# bevy_animagraph

./: Cargo.toml  LICENSE
.cargo/: config.toml
editor/: Cargo.toml  Graph0.anima_graph
editor/examples/: main.rs
editor/src/: combo_box.rs  lib.rs  popup.rs
examples/: character.rs
src/: asset_ref.rs  lib.rs  nodes.rs  params.rs  state.rs
