[package]
name = "bevy_animagraph"
version = "0.1.0"
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]
edition = "2018"

[workspace]
members = ["editor"]

[dependencies]
bevy = { git = "https://github.com/lassade/bevy", branch = "animations" }
petgraph = "0.5.1"

[patch."https://github.com/bevyengine/bevy"]
bevy = { git = "https://github.com/lassade/bevy", branch = "animations" }