[package]
name = "bevy_animagraph"
version = "0.1.0"
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]
edition = "2018"

[workspace]
members = ["editor"]

[dependencies]
bevy = { git = "https://github.com/lassade/bevy", branch = "dev" }
petgraph = { version =  "0.5.1", features = ["serde-1"] }
indexmap = { version = "1.6.2", features = ["serde-1"] }
ahash = "0.7.2"
rand = "0.8.3"
smallvec = "1.6.1"
serde = { version = "1.0.126", features = ["derive"] }
anyhow = "1.0.40"

[patch."https://github.com/bevyengine/bevy"]
bevy = { git = "https://github.com/lassade/bevy", branch = "dev" }