[package]
name = "bevy_animagraph_editor"
version = "0.1.0"
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/lassade/bevy", branch = "dev" }
bevy_egui = { git = "https://github.com/lassade/bevy_egui", branch = "main" }
bevy_animagraph = { path = "../" }
native-dialog = "0.5.5"
ron = "0.6.4"
anyhow = "1.0.40"

[[example]]
name = "main"
path = "examples/main.rs"